--- a/cli/package.json
+++ b/cli/package.json
@@ -1,5 +1,6 @@
 {
   "name": "cfn",
+  "bin": "dist/prod.js",
   "dependencies": {
     "await-exec": "^0.1.2",
     "aws-sdk": "^2.831.0",
@@ -10,5 +11,25 @@
     "inquirer": "^7.3.3",
     "s3-lambo": "^1.0.0"
   },
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "scripts": {
+    "start": "webpack --config webpack/dev.config.js --watch",
+    "build": "webpack --config webpack/prod.config.js",
+    "pack": "npm run build && pkg package.json --out-path ../bin/"
+  },
+  "devDependencies": {
+    "@purtuga/esm-webpack-plugin": "^1.2.1",
+    "terser": "^3.14.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.0.9"
+  },
+  "pkg": {
+    "scripts": "src/*.js",
+    "assets": [
+      "../cloudformation/**/*",
+      "../web-app/**/*"
+    ]
+  }
 }
